eslint-ed, modularized

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 /.vscode
+node_modules/
+/*test.js
 /all.json
 /format.json
-/t.js
-/include copy.json
-node_modules/
-/jiratest.js
-/svntest.js
-/testtemplate.js
 /tag*.json
 /*.xlsx
 roadmap.txt
