--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "Guido Hollander",
   "license": "ISC",
   "dependencies": {
+    "@azure/identity": "^3.0.0",
+    "@microsoft/microsoft-graph-client": "^3.0.2",
     "axios": "^0.27.2",
     "child_process": "^1.0.2",
     "clear": "^0.1.0",
     "glob": "^8.0.3",
     "inquirer": "^8.0.0",
+    "inquirer-search-list": "^1.2.6",
     "mssql": "^9.0.0",
     "node-beep": "^0.0.3",
     "node-svn-ultimate": "^1.2.1",
