--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "glob": "^8.0.3",
     "inquirer": "^8.0.0",
     "inquirer-search-list": "^1.2.6",
+    "install": "^0.13.0",
     "mssql": "^9.0.0",
     "node-beep": "^0.0.3",
     "node-svn-ultimate": "^1.2.1",
+    "npm": "^8.19.2",
     "ps-node": "^0.1.6",
     "semver": "^7.3.7",
+    "svn-info": "^1.1.0",
     "xlsx": "^0.18.5",
     "yargs": "^17.5.1"
   },
