--- a/package.json
+++ b/package.json
@@ -14,15 +14,27 @@
     "await-spawn": "^4.0.2",
     "axios": "^0.27.2",
     "clear": "^0.1.0",
+    "find-process": "^1.4.7",
     "glob": "^8.0.3",
     "inquirer": "^8.0.0",
     "inquirer-checkbox-plus-prompt": "^1.4.1",
     "inquirer-search-list": "^1.2.6",
+    "inquirer-select-directory": "^1.2.0",
+    "libxmljs": "^0.19.10",
+    "markdown-list": "^0.1.0",
+    "mqtt": "^4.3.7",
     "mssql": "^9.0.0",
+    "mustache": "^4.2.0",
     "node-svn-ultimate": "^1.2.1",
     "ps-node": "^0.1.6",
+    "recursive-readdir": "^2.2.3",
     "semver": "^7.3.7",
+    "stringcase": "^4.3.1",
+    "watcher": "^2.2.2",
     "xlsx": "^0.18.5",
+    "xml2js": "^0.5.0",
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.32",
     "yargs": "^17.5.1"
   },
   "engines": {
