--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "yargs": "^17.5.1"
   },
   "engines": {
-    "node": "^16.17.0"
+    "node": ">=16.17.0"
   },
   "devDependencies": {
     "eslint": "^8.24.0",
